reorganized files into correct assets folders, formatted home and profile pages with header/footer

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Footer</title>
+    <title>Date Night</title>
 
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
@@ -22,10 +22,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="main.css">
-
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/profile.css">
 
 </head>
 
@@ -44,11 +44,12 @@
         </div>
 
         <div class="navbar__link" class="navbar__link">
-                <a href="#">Home</a>
-                <a href="#">Events</a>
-                <a href="#">Media</a>
-                <a href="#">Dining</a>
-                <a href="#">Your Profile</a>
+                <a href="home.html">Home</a>
+                <a href="events.html">Events</a>
+                <a href="media.html">Media</a>
+                <a href="dining.html">Dining</a>
+                <a href="profile.html">Your Profile</a>
+        </div>
         </div>
     </div>
 
