--- a/profile.html
+++ b/profile.html
@@ -22,21 +22,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="main.css">
-
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/profile.css">
 
 </head>
 
 <body>
 
 <div class="container">
-    <header class="header">
-        <div class="header__textbox">
-
-        </div>
-    </header>
 
     <div class="navbar">
         <div class="navbar__logobox">  
@@ -44,11 +39,11 @@
         </div>
 
         <div class="navbar__link" class="navbar__link">
-                <a href="#">Home</a>
-                <a href="#">Events</a>
-                <a href="#">Media</a>
-                <a href="#">Dining</a>
-                <a href="#">Your Profile</a>
+                <a href="home.html">Home</a>
+                <a href="events.html">Events</a>
+                <a href="media.html">Media</a>
+                <a href="dining.html">Dining</a>
+                <a href="profile.html">Your Profile</a>
         </div>
     </div>
 
