--- a/index.html
+++ b/index.html
@@ -2,81 +2,54 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- CSS Link -->
-  <link rel="stylesheet" href="assets/styles.css">
-  <!-- Bootstrap -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Date Night</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
 
-  <title>Page layout</title>
+    <!-- FONT AWESOME -->
+    <script src="https://kit.fontawesome.com/3f7d57fead.js" crossorigin="anonymous"></script>
+
+    <!-- MATERIALIZE -->
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"
+        media="screen,projection" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/splash.css">
+
 </head>
 
 <body>
 
+    <section class="section-splash">
 
+            <div class="section-splash__text-box">
+                <div class="section-splash__heading-primary">
+                    <h1 class="heading-primary--main"> Date Night</h1>
+                    <h2 class="heading-primary--sub">Your Romance is One of a Kind. Your Dates Should Be, Too. </h2>
 
+                    <button class="btn btn-splash">
+                        <a href="#">Create A Profile</a>
+                    </button>
 
-  <!-- Split Screen  -->
+                    <button class="btn btn-splash">
+                        <a href="home.html">Continue to Site</a>
+                    </button>
 
-
-
-
-  <!-- Row 1  -->
-  <div class="row">
-    <div class="col-md-4 mb-3">
-      <div class="split left">
-        <div class="centered">
-          <h2>Eat Out</h2>
-
-
-          </table>
-          <ul>
-            <li> Honey grow</li>
-            <li>Louie Louie</li>
-            <li> The Vector Cafe</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <!-- Row 2 -->
-    <div class="col-md-4 mb-3">
-      <div class="split right">
-        <div class="centered">
-
-          <h2>Stay In</h2>
-
-          <h4>Drinks</h4>
-          <ul>
-            <li> Vodka</li>
-            <li> Wine</li>
-            <li> Soda</li>
-          </ul>
-
-        </div>
-      </div>
-    </div>
-    <!-- Row 3 -->
-    <div class="col-md-4 mb-3">
-      <div class="split right">
-        <div class="centered">
-          <h4>food recipes</h4>
-          <ul>
-            <li> Shrmip tacos </li>
-            <li> Burger </li>
-            <li> Pasta </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-
-  </div>
-
+                    <h3 class="heading-primary-sub-2"> Browse curated picks for your perfect date night.</h3>
+                </div>
+            </div>
+        </section>
 </body>
 
 </html>
