updated landing page with stylized cards

--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,9 +18,10 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"
+        media="screen,projection" />
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -41,69 +43,166 @@
     </header>
 
     <div class="navbar">
-        <div class="navbar__logobox">  
-        Date Night
+        <div class="navbar__logobox">
+            Date Night
         </div>
         <div class="navbar__link" class="navbar__link">
-                <a href="home.html">Home</a>
-                <a href="events.html">Events</a>
-                <a href="media.html">Media</a>
-                <a href="dining.html">Dining</a>
-                <a href="profile.html">Your Profile</a>
+            <a href="home.html">Home</a>
+            <a href="events.html">Events</a>
+            <a href="media.html">Media</a>
+            <a href="dining.html">Dining</a>
+            <a href="profile.html">Your Profile</a>
         </div>
-        </div>
+    </div>
 
 
-        <div class="content">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-        </div>
-   
-    
+    <div class="content">
+
+        <section class="events">
+            <div class="row">
+                <div class="section-heading">
+                    Events
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s6 m3">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="https://b.zmtcdn.com/data/res_imagery/307374_RESTAURANT_6688d81a57b8da4bcf20d725de39a3d2.jpg?fit=around%7C200%3A200&crop=200%3A200%3B%2A%2C%2A">
+                            <span class="card-title">Restaurant Name</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-heart"></i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>Cuisine: Italian</p>
+                            <p>Budget: $$$</p>
+                        </div>
+                        <div class="card-action">
+                                <a href="#">Link to Restaurant</a>
+                              </div>
+                    </div>
+                </div>
+
+                <div class="col s6 m3">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="https://b.zmtcdn.com/data/res_imagery/307374_RESTAURANT_6688d81a57b8da4bcf20d725de39a3d2.jpg?fit=around%7C200%3A200&crop=200%3A200%3B%2A%2C%2A">
+                                <span class="card-title">Restaurant Name</span>
+                                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-heart"></i></a>
+                            </div>
+                            <div class="card-content">
+                                <p>Cuisine: Italian</p>
+                                <p>Budget: $$$</p>
+                            </div>
+                            <div class="card-action">
+                                    <a href="#">Link to Restaurant</a>
+                                  </div>
+                        </div>
+                    </div>
+
+                    <div class="col s6 m3">
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="https://b.zmtcdn.com/data/res_imagery/307374_RESTAURANT_6688d81a57b8da4bcf20d725de39a3d2.jpg?fit=around%7C200%3A200&crop=200%3A200%3B%2A%2C%2A">
+                                    <span class="card-title">Restaurant Name</span>
+                                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-heart"></i></a>
+                                </div>
+                                <div class="card-content">
+                                    <p>Cuisine: Italian</p>
+                                    <p>Budget: $$$</p>
+                                </div>
+                                <div class="card-action">
+                                        <a href="#">Link to Restaurant</a>
+                                      </div>
+                            </div>
+                        </div>
+
+                        <div class="col s6 m3">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="https://b.zmtcdn.com/data/res_imagery/307374_RESTAURANT_6688d81a57b8da4bcf20d725de39a3d2.jpg?fit=around%7C200%3A200&crop=200%3A200%3B%2A%2C%2A">
+                                        <span class="card-title">Restaurant Name</span>
+                                        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-heart"></i></a>
+                                    </div>
+                                    <div class="card-content">
+                                        <p>Cuisine: Italian</p>
+                                        <p>Budget: $$$</p>
+                                    </div>
+                                    <div class="card-action">
+                                            <a href="#">Link to Restaurant</a>
+                                          </div>
+                                </div>
+                            </div>
+            </div>
+
+            <div class="row align-right">
+               view more
+            </div>
+        </section>
+
+
+        <section class="events">
+            <div class="row">
+                <div class="section-heading">
+                    Restaurants
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s6 m3">
+                    picture
+                </div>
+
+                <div class="col s6 m3">
+                    picture
+                </div>
+
+                <div class="col s6 m3">
+                    picture
+                </div>
+
+                <div class="col s6 m3">
+                    picture
+                </div>
+            </div>
+        </section>
+
+    </div>
+
+
+
 
 
 
     <footer class="footer">
-            <div class="footer__logobox">
-                <h4 class="logo">
-                    Date Night
-                </h4>
-                <i class="fas fa-kiss-wink-heart"></i>
-            </div>
-            <div class="row">
-                <div class="col s6">
-                    <div class="footer__navigation">
-                        <ul class="footer__list">
-                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
-                            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col s6">
-                    <p class="footer__copyright">
-                        
-                        Copyright &copy; TEAM 2 
-                    </p>
+        <div class="footer__logobox">
+            <h4 class="logo">
+                Date Night
+            </h4>
+            <i class="fas fa-kiss-wink-heart"></i>
+        </div>
+        <div class="row">
+            <div class="col s6">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                    </ul>
                 </div>
             </div>
-        </footer>
- </div>
+            <div class="col s6">
+                <p class="footer__copyright">
+
+                    Copyright &copy; TEAM 2
+                </p>
+            </div>
+        </div>
+    </footer>
+    </div>
 
 
-<!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
 </body>
+
 </html>
