--- a/profile.html
+++ b/profile.html
@@ -60,8 +60,9 @@
                 <div class="col 12s m6">
                     <div class="profile__text">
                         <p>
-                        You're the adventerous couple! Whether it's jetsetting on your next vacation or trying out new,
-                        exotic foods, you are always on the lookout for something new and fun to do.
+                            You're the adventerous couple! Whether it's jetsetting on your next vacation or trying out
+                            new,
+                            exotic foods, you are always on the lookout for something new and fun to do.
                         </p>
                         <br>
                         <br>
