fixed all links and page names so that they work. created layout for the events and dining sections (restaurants only in the dining section for now)

--- a/home.html
+++ b/home.html
@@ -48,14 +48,20 @@
             </div>
 
 
-    <header class="header">
+    <header class="header header-home">
         <div class="header__textbox">
-
+            <h1 class="heading-text">
+            Light Up Your Romance
+        </h1>
         </div>
     </header>
 
 
-    <div class="content">
+    <div class="content">  
+    
+        <div class="row">
+        <h3 class="heading-secondary center-align">Plan Your Next Romantic Gesture <i class="fas fa-kiss-wink-heart gradient-text"></i></h3>
+        </div>
 
         <section class="events">
             <div class="row">
@@ -142,8 +148,8 @@
                 </div>
             </div>
 
-            <div class="row align-right">
-                view more
+            <div class="row right-align">
+                <a href="#" class="btn-text">View more &rarr;</a>
             </div>
         </section>
 
@@ -233,9 +239,9 @@
                 </div>
             </div>
 
-            <div class="row align-right">
-                view more
-            </div>
+            <div class="row right-align">
+                    <a href="#" class="btn-text">View more &rarr;</a>
+                </div>
         </section>
 
     </div>
