changed names and locations of js files, started eventbrite ajax

--- a/events.html
+++ b/events.html
@@ -29,6 +29,9 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/profile.css">
 
+    <!-- JQUERY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -160,8 +163,11 @@
     </div>
 
 
-    <!--JavaScript at end of body for optimized loading-->
+    <!--JavaScript at end of body for optimized loading (Materialize) -->
     <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+
+    <!-- Javascript for Ajax calls -->
+    <script src="assets/js/evenbrite-ajax.js"></script>
 </body>
 
 </html>
