--- a/Dining.html
+++ b/Dining.html
@@ -287,7 +287,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Js Link -->
-  <script src="Js/ajax.js">   </script>
+  <script src="assets/js/mealIDB-api.js">   </script>
 
 </body>
 
