created a workign ajax call to eventbrite on the events page and began appending cards to the events div

--- a/events.html
+++ b/events.html
@@ -70,7 +70,7 @@
         </div>
 
 
-        <div class="row">
+        <div class="row" id="events-div">
 
             <div class="col s12 m4">
                 <div class="card">
