--- a/Dining.html
+++ b/Dining.html
@@ -79,14 +79,16 @@
       </div>
 
       <div class="col m4 s12">
+             <!-- empy div -->
+        <div id="view"></div>
 
           <div class="card horizontal">
               <div class="card-image">
                 <img src="https://lorempixel.com/100/190/nature/6">
               </div>
-              <div class="card-stacked">
-                <div class="card-content">
-                  <p>I am a very simple card. I am good at containing small bits of information.</p>
+              <div class="card-stacked"> 
+                 <div class="card-content"> 
+                  <p>I am a very simple card. I am good at containing small bits of information.</p> 
                 </div>
                 <div class="card-action">
                   <a href="#">This is a link</a>
@@ -118,7 +120,7 @@
                       <a href="#">This is a link</a>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 
         </div>
 
@@ -279,14 +281,14 @@
       </div>
     </div>
   </footer>
-<!-- A jax -->
+                                  <!-- A jax -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
-  <!-- jQuery -->
+        <!--JavaScript at end of body for optimized loading-->
+ <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+                        <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <!-- Js Link -->
+                        <!-- Js Link -->
   <script src="assets/js/mealIDB-api.js">   </script>
 
 </body>
