events page ajax calls and formatting is done! right now it only calls from the 'music' category and generates cards with events info for up to 9 events

--- a/events.html
+++ b/events.html
@@ -72,7 +72,7 @@
 
         <div class="row" id="events-div">
 
-            <div class="col s12 m4">
+            <!-- <div class="col s12 m4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/event_sample.jpg">
@@ -124,7 +124,7 @@
                                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
 
         </div>
