added ajax calls to dinning page, links in progress

--- a/Dining.html
+++ b/Dining.html
@@ -82,9 +82,9 @@
              <!-- empy div -->
         <div id="view"></div>
 
-          <div class="card horizontal">
+          <!-- <div class="card horizontal">
               <div class="card-image">
-                <img src="https://lorempixel.com/100/190/nature/6">
+                <img class="activator" src="https://lorempixel.com/100/190/nature/6">
               </div>
               <div class="card-stacked"> 
                  <div class="card-content"> 
@@ -97,7 +97,7 @@
             </div>
             <div class="card horizontal">
                 <div class="card-image">
-                  <img src="https://lorempixel.com/100/190/nature/6">
+                  <img class="activator"src="https://lorempixel.com/100/190/nature/6">
                 </div>
                 <div class="card-stacked">
                   <div class="card-content">
@@ -110,7 +110,7 @@
               </div>
               <div class="card horizontal">
                   <div class="card-image">
-                    <img src="https://lorempixel.com/100/190/nature/6">
+                    <img class="activator" src="https://lorempixel.com/100/190/nature/6">
                   </div>
                   <div class="card-stacked">
                     <div class="card-content">
@@ -127,7 +127,7 @@
 
         <div class="col m4 s12">
 
-            <div class="card horizontal">
+            <!-- <div class="card horizontal">
                 <div class="card-image">
                   <img src="https://lorempixel.com/100/190/nature/6">
                 </div>
@@ -163,8 +163,8 @@
                       </div>
                       <div class="card-action">
                         <a href="#">This is a link</a>
-                      </div>
-                    </div>
+                      </div> -->
+                    <!-- </div> --> -->
                   </div>
                   
           </div>
