--- a/Dining.html
+++ b/Dining.html
@@ -281,6 +281,11 @@
       </div>
     </div>
   </footer>
+                               <!-- Fire Base -->
+  <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+ 
+
                                   <!-- A jax -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <!--JavaScript at end of body for optimized loading-->
