--- a/Dining.html
+++ b/Dining.html
@@ -80,7 +80,7 @@
 
       <div class="col m4 s12">
              <!-- empy div -->
-        <div id="view"></div>
+        <div id="recipes-div"></div>
 
           <!-- <div class="card horizontal">
               <div class="card-image">
@@ -95,6 +95,7 @@
                 </div>
               </div>
             </div>
+
             <div class="card horizontal">
                 <div class="card-image">
                   <img class="activator"src="https://lorempixel.com/100/190/nature/6">
