--- a/questions.html
+++ b/questions.html
@@ -8,28 +8,31 @@
     <title>questions</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   
+    <link rel="stylesheet" href="./assets/css/questions.css">
+
 
 
 </head>
 
 <body>
+    <div id="bigbox">
+        <!--create container div-->
+        <div id="container" class="quiz-container">
+            <!--create div for quiz-->
+            <div id="title">
+                <h1>Romance Quiz</h1>
+            </div>
 
-    <!--create container div-->
-    <div id="container" class="quiz-container">
-        <!--create div for quiz-->
-        <div id="title"><h1>Romance Quiz</h1></div>
-
-        <div id="question" class="question"></div>
-        <div>
+            <div id="question" class="question"></div>
+            <div>
                 <button id="next-button" type="button" class="btn btn-primary">Next</button>
-            
+
+            </div>
         </div>
-    </div>
-    <div id="result" class="results-box">
-            <div id="adventurous" class="results"></div>
-            <div id="foodie" class="results"></div>
-            <div id="homebody" class="results"></div>
+        <div id="result" class="results-box">
+            <div id="category" class="results"></div>
+
+        </div>
     </div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
