updated text in js

--- a/questions.html
+++ b/questions.html
@@ -31,6 +31,7 @@
         </div>
         <div id="result" class="results-box">
             <div id="category" class="results"></div>
+            <button id="reset-button" type="button" class="btn btn-primary">Return to Questions</button>
 
         </div>
     </div>
