zomato and dining page are fully updated and functional

--- a/Dining.html
+++ b/Dining.html
@@ -78,13 +78,10 @@
           <img src="assets/images/dining/restaurants-img.jpg" class="responsive-img">
         </div>
 
-        <div class="col m4 s12">
-          <div id="restaurants-div-1"></div>
+        <div class="col m8 s12">
+          <div id="restaurants-div"></div>
         </div>
 
-        <div class="col m4 s12">
-          <div id="restaurants-div-2"></div>
-        </div>
     </section>
 
     <section class="recipes">
