created baic sign up form. replaced image in recipes section of dining. started coding the ajax calls for landing page but theyre not currently working

--- a/home.html
+++ b/home.html
@@ -29,6 +29,9 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/profile.css">
 
+    <!-- JQUERY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -71,7 +74,9 @@
             </div>
 
             <div class="row">
-                <div class="col s6 m3">
+                <div class="events-div"></div>
+
+                <!-- <div class="col s6 m3">
                     <div class="card">
                         <div class="card-image">
                             <img
@@ -145,8 +150,8 @@
                             <a href="#">Link to Restaurant</a>
                         </div>
                     </div>
-                </div>
-            </div>
+                </div> -->
+            </div> 
 
             <div class="row right-align">
                 <a href="#" class="btn-text">View more &rarr;</a>
@@ -162,7 +167,9 @@
             </div>
 
             <div class="row">
-                <div class="col s6 m3">
+                    <div class="restaurants-div"></div>
+
+                <!-- <div class="col s6 m3">
                     <div class="card">
                         <div class="card-image">
                             <img
@@ -236,7 +243,7 @@
                             <a href="#">Link to Restaurant</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="row right-align">
@@ -280,6 +287,9 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+
+    <!-- JS link -->
+    <script src="assets/js/homepage-api.js"></script>
 </body>
 
 </html>
