--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
                 <div class="section-splash__heading-primary">
                     <h1 class="heading-primary--main"> Date Night</h1>
                     <h2 class="heading-primary--sub">Your Romance is One of a Kind. Your Dates Should Be, Too. </h2>
+                    
 
                     <button class="btn btn-splash">
-                        <a href="#">Create A Profile</a>
+                        <a href="signup.html">Create A Profile</a>
                     </button>
 
                     <button class="btn btn-splash">
