Added fire store componets to project

--- a/login.html
+++ b/login.html
@@ -111,7 +111,10 @@
 
     </div>
 
-
+<!-- Id search for fire base -->
+<h1 id = "sample"></h1>
+<input text="textfield" id="newData"/>
+<button id="saveButton"></button>
 
 
     <!-- Fire Base -->
