--- a/login.html
+++ b/login.html
@@ -120,7 +120,7 @@
     <!-- Fire Base -->
      <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script> 
      <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script> -->
-     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-firestore.js"></script> -->
+     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script> -->
    
 
     <!-- A jax -->
