added search bar to events page - still needs work

--- a/events.html
+++ b/events.html
@@ -75,6 +75,11 @@
                         </select>
                     </div>
                 </div>
+
+                <div class="searchbar-date">
+                        Pick a Date:
+                        <input type="text" class="datepicker" >
+                </div>
             </div>
         </div>
 
