created functioning search bars for recipes and restaurants

--- a/events.html
+++ b/events.html
@@ -66,15 +66,16 @@
 
         <div class="searchbar">
             <div class="row">
-                <form id="search-form">
                 <div class="col m5 s12">
                     <div class="searchbar-location">
+                            <form id="search-form">
                         <select class="browser-default" id="location-input">
                             <option value="" disabled selected>Your Location</option>
                             <option value="philadelphia">Philadelphia</option>
                             <option value="newyork">New York</option>
                             <option value="losangeles">LA</option>
                         </select>
+                        </form>
                     </div>
                 </div>
 
