--- a/Dining.html
+++ b/Dining.html
@@ -2,113 +2,183 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <!-- GOOGLE FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
 
-  <!-- FONT AWESOME -->
-  <script src="https://kit.fontawesome.com/3f7d57fead.js" crossorigin="anonymous"></script>
+    <!-- FONT AWESOME -->
+    <script src="https://kit.fontawesome.com/3f7d57fead.js" crossorigin="anonymous"></script>
 
-  <!-- MATERIALIZE -->
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css" media="screen,projection" />
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- MATERIALIZE -->
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css" media="screen,projection" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- MAIN CSS -->
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="stylesheet" href="assets/css/header.css">
-  <link rel="stylesheet" href="assets/css/footer.css">
-  <link rel="stylesheet" href="assets/css/profile.css">
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/profile.css">
 
 
-  <title>Date Night - Dining</title>
+    <title>Date Night - Dining</title>
 </head>
 
 <body>
 
 
-  <!-- Navbar -->
-  <div class="navbar">
-    <div class="navbar__logobox">
-      Date Night
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="navbar__logobox">
+            Date Night
+        </div>
+
+        <div class="navbar__link" class="navbar__link">
+            <a href="home.html">Home</a>
+            <a href="events.html">Events</a>
+            <a href="media.html">Media</a>
+            <a href="dining.html">Dining</a>
+            <a href="profile.html">Your Profile</a>
+        </div>
     </div>
 
-    <div class="navbar__link" class="navbar__link">
-      <a href="home.html">Home</a>
-      <a href="events.html">Events</a>
-      <a href="media.html">Media</a>
-      <a href="dining.html">Dining</a>
-      <a href="profile.html">Your Profile</a>
+    <header class="header header-dining">
+        <div class="header__textbox">
+            <h1 class="heading-text">
+                Party of 2
+            </h1>
+        </div>
+    </header>
+
+    <div class="content">
+
+        <div class="row">
+            <h3 class="heading-secondary center-align">Eat out or order in. It doesn't really matter which you choose when you're with the one you love.
+            </h3>
+        </div>
+
+        <section class="restaurants">
+            <div class="row">
+                <div class="section-heading">
+                    Restaurants
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col m4 s12">
+                    <div class="restaurants-search-div search-div">
+                        <div class="search-div-content">
+                            <div class="search-div-text">Find Restaurants in Your Area</div>
+
+                            <form id="dining-search-form">
+
+                                <div class="row">
+
+                                    <select class="browser-default" id="location-restaurant-input">
+                    <option value="" disabled selected>Your Location</option>
+                    <option value="philadelphia">Philadelphia</option>
+                    <option value="newyork">New York</option>
+                    <option value="losangeles">LA</option>
+                  </select>
+
+                                </div>
+
+                                <div class="row">
+                                    <select class="browser-default" id="restaurant-type-input">
+                    <option value="" disabled selected>Your Couple Type</option>
+                    <option value="quirky">Quirky</option>
+                    <option value="homebody">Homebody</option>
+                    <option value="athletic">Athletic</option>
+                    <option value="foodie">Foodie</option>
+                    <option value="party">Party</option>
+                  </select>
+                                </div>
+                                <div class="row">
+                                    <a class="waves-effect waves-light btn #b39ddb deep-purple lighten-3" id="restaurant-search-btn"><i
+                      class="material-icons left">search</i>Search</a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col m8 s12">
+                    <div id="restaurants-div"></div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="recipes">
+            <div class="row">
+                <div class="section-heading">
+                    Recipes
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col m4 s12">
+                    <div class="recipes-search-div search-div">
+                        <div class="search-div-text">Find your next favorite dish</div>
+
+
+                        <form id="dining-search-form">
+
+                            <!-- <div class="row">
+
+                                <select class="browser-default" id="location-restaurant-input">
+                  <option value="" disabled selected>Your Location</option>
+                  <option value="philadelphia">Philadelphia</option>
+                  <option value="newyork">New York</option>
+                  <option value="losangeles">LA</option>
+                </select>
+
+                            </div> -->
+
+                            <div class="row">
+
+                                <select class="browser-default" id="couple-recipe-input">
+                  <option value="" disabled selected>Your Couple Type</option>
+                  <option value="quirky">Quirky</option>
+                  <option value="homebody">Homebody</option>
+                  <option value="athletic">Athletic</option>
+                  <option value="foodie">Foodie</option>
+                  <option value="party">Party</option>
+                </select>
+                            </div>
+                            <div class="row">
+
+
+                                <a class="waves-effect waves-light btn #b39ddb deep-purple lighten-3" id="recipe-search-btn"><i
+                    class="material-icons left">search</i>Search</a>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+
+                <div class="col m4 s12">
+                    <div id="recipes-div-1"></div>
+                </div>
+
+                <div class="col m4 s12">
+                    <div id="recipes-div-2"></div>
+                </div>
+            </div>
+        </section>
+
     </div>
-  </div>
 
-  <header class="header header-dining">
-    <div class="header__textbox">
-      <h1 class="heading-text">
-        Party of 2
-      </h1>
-    </div>
-  </header>
-
-  <div class="content">
-
-    <div class="row">
-      <h3 class="heading-secondary center-align">Eat out or order in. It doesn't really matter which you choose when
-        you're with the one you
-        love.</h3>
-    </div>
-
-    <section class="restaurants">
-      <div class="row">
-        <div class="section-heading">
-          Restaurants
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col m4 s12">
-          <img src="assets/images/dining/restaurants-img.jpg" class="responsive-img">
-        </div>
-
-        <div class="col m8 s12">
-          <div id="restaurants-div"></div>
-        </div>
-
-    </section>
-
-    <section class="recipes">
-      <div class="row">
-        <div class="section-heading">
-          Recipes
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col m4 s12">
-          <img src="assets/images/dining/recipes-img.jpg" class="responsive-img">
-        </div>
-
-        <div class="col m4 s12">
-          <div id="recipes-div-1"></div>
-        </div>
-
-        <div class="col m4 s12">
-          <div id="recipes-div-2"></div>
-        </div>
-      </div>
-    </section>
-
-  </div>
-
-  <!-- <div class="card horizontal">
+    <!-- <div class="card horizontal">
                 <div class="card-image">
                   <img src="https://lorempixel.com/100/190/nature/6">
                 </div>
@@ -145,10 +215,10 @@
                       <div class="card-action">
                         <a href="#">This is a link</a>
                       </div> -->
-  <!-- </div> -->
+    <!-- </div> -->
 
 
-  <!-- Split Screen 
+    <!-- Split Screen 
 
 
 
@@ -206,46 +276,46 @@
 
 
 
-  <footer class="footer">
-    <div class="footer__logobox">
-      <h4 class="logo">
-        Date Night
-      </h4>
-      <i class="fas fa-kiss-wink-heart"></i>
-    </div>
-    <div class="row">
-      <div class="col s6">
-        <div class="footer__navigation">
-          <ul class="footer__list">
-            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
-          </ul>
+    <footer class="footer">
+        <div class="footer__logobox">
+            <h4 class="logo">
+                Date Night
+            </h4>
+            <i class="fas fa-kiss-wink-heart"></i>
         </div>
-      </div>
-      <div class="col s6">
-        <p class="footer__copyright">
+        <div class="row">
+            <div class="col s6">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col s6">
+                <p class="footer__copyright">
 
-          Copyright &copy; TEAM 2
-        </p>
-      </div>
-    </div>
-  </footer>
-  <!-- Fire Base -->
-  <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+                    Copyright &copy; TEAM 2
+                </p>
+            </div>
+        </div>
+    </footer>
+    <!-- Fire Base -->
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
 
 
-  <!-- A jax -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- A jax -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <!-- Js Link -->
-  <script src="assets/js/mealIDB-api.js"></script>
-  <script src="assets/js/zomato-api.js"></script>
-
+    <!-- Js Link -->
+    <script src="assets/js/mealIDB-api.js"></script>
+    <script src="assets/js/zomato-api.js"></script>
+    <script src="assets/js/search-dining.js"></script>
 </body>
 
 </html>
