added links to quiz in the homepage and profile page

--- a/home.html
+++ b/home.html
@@ -18,8 +18,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"
-        media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css" media="screen,projection" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -56,6 +55,13 @@
             <h1 class="heading-text">
                 Light Up Your Romance
             </h1>
+
+            <a href="questions.html" target="_blank">
+                <button class="btn btn-quiz">
+                Take The Quiz!
+            </button>
+            </a>
+
         </div>
     </header>
 
@@ -63,8 +69,7 @@
     <div class="content">
 
         <div class="row">
-            <h3 class="heading-secondary center-align">Plan Your Next Romantic Gesture <i
-                    class="fas fa-kiss-wink-heart gradient-text"></i></h3>
+            <h3 class="heading-secondary center-align">Plan Your Next Romantic Gesture <i class="fas fa-kiss-wink-heart gradient-text"></i></h3>
         </div>
 
         <section class="events">
@@ -149,7 +154,7 @@
 
 
 
-                <!-- <div class="col s6 m3">
+<!-- <div class="col s6 m3">
                     <div class="card">
                         <div class="card-image">
                             <img
