--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"
-        media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css" media="screen,projection" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -48,7 +47,9 @@
                     <a href="#login">Log In</a>
                 </button>
 
-                <h3 class="heading-primary-sub-2"> Browse curated picks for your perfect date night.</h3>
+                <a href="home.html">
+                    <h3 class="heading-primary-sub-2"> Browse curated picks for your perfect date night.</h3>
+                </a>
             </div>
         </div>
     </section>
@@ -119,8 +120,8 @@
                 <div class="container" style="background-color:#f1f1f1">
 
                     <a href="#home">
-                    <button type="button" class="cancelbtn-2">Cancel</button>
-                </a>
+                        <button type="button" class="cancelbtn-2">Cancel</button>
+                    </a>
                     <span class="psw">Forgot <a href="#">password?</a></span>
                 </div>
             </form>
