--- a/profile.html
+++ b/profile.html
@@ -18,8 +18,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"
-        media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css" media="screen,projection" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -54,20 +53,20 @@
         <section class="profile-box">
             <div class="row">
                 <div class="col 12s m6">
-                    <img src="assets/images/profile/profile-pic/adventure-couple.jpg" class="profile__img">
+                    <!-- <img src="assets/images/profile/profile-pic/adventure-couple.jpg" class="profile__img"> -->
                 </div>
 
                 <div class="col 12s m6">
                     <div class="profile__text">
-                        <p>    
+                        <p>
 
-                        You're the adventurous couple! Whether it's jetsetting on your next vacation or trying out new,
-                        exotic foods, you are always on the lookout for something new and fun to do.
-                          
+                            You're the adventurous couple! Whether it's jetsetting on your next vacation or trying out new, exotic foods, you are always on the lookout for something new and fun to do.
+
                         </p>
                         <br>
-                        <br>
-                        <a class="waves-effect waves-light btn">Take the Quiz Again</a>
+                        <a href="questions.html" target="_blank">
+                            <button class="waves-effect waves-light btn">Take the Quiz Again</button>
+                        </a>
                     </div>
                 </div>
             </div>
