linked quiz, working on data

--- a/login.html
+++ b/login.html
@@ -111,6 +111,8 @@
 
     </div>
 
+    <pre id= "object"> </pre>
+
 <!-- Id search for fire base -->
 <h1 id = "sample"></h1>
 <input text="textfield" id="newData"/>
