--- a/profile.html
+++ b/profile.html
@@ -67,7 +67,7 @@
                         </p>
                         <br>
                         <br>
-                        <a class="waves-effect waves-light btn">Take the Quiz Again</a>
+                        <a class="waves-effect waves-light btn" href="questions.html">Take the Quiz Again</a>
                     </div>
                 </div>
             </div>
