styled media page

--- a/media.html
+++ b/media.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Date Night - Entertainment</title>
-
+    <title>Date Night - Home</title>
 
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
@@ -19,8 +18,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"
-        media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css" media="screen,projection" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -29,15 +27,19 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/profile.css">
+
+    <!-- JQUERY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
 <body>
+
 
     <div class="navbar">
         <div class="navbar__logobox">
             Date Night
         </div>
-
         <div class="navbar__link" class="navbar__link">
             <a href="home.html">Home</a>
             <a href="events.html">Events</a>
@@ -47,39 +49,24 @@
         </div>
     </div>
 
-    <div class="content">
-        <div class="row">
-            <!-- the list are just there to give us and example -->
-            <div class="col-sm">
-                Music
 
-                <ul>
-                    <li> John Legend</li>
-                    <li> Adele</li>
-                    <li> Whitney Houston</li>
-                    <li> Ella Mai</li>
+    <header class="header header-media">
+        <div class="header__textbox">
+            <h1 class="heading-text">
+                Coming Soon: Media Recommendations
+            </h1>
 
-                </ul>
-            </div>
-            <div class="col-sm">
-                Moives
-
-                <ul>
-                    <li> About time </li>
-                    <li> The Note book </li>
-                    <li> The ugly Truth </li>
-
-
-
-                </ul>
-            </div>
-            <!-- Extra incase we want to add Books etc... -->
-            <div class="col-sm">
-                Books
-            </div>
         </div>
-    </div>
+    </header>
 
+
+    <div class="content">
+
+        <div class="row">
+            <h3 class="heading-secondary center-align">Coming Soon: Recommendations for the best music and movies to keep up the romance at home <i class="fas fa-kiss-wink-heart gradient-text"></i></h3>
+        </div>
+
+    </div>
 
 
 
@@ -110,9 +97,13 @@
             </div>
         </div>
     </footer>
+    </div>
+
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+
+    <!-- JS link -->
 
 </body>
 
