--- a/profile.html
+++ b/profile.html
@@ -60,7 +60,7 @@
                     <div class="profile__text">
                         <p>
 
-                            You're the adventurous couple! Whether it's jetsetting on your next vacation or trying out new, exotic foods, you are always on the lookout for something new and fun to do.
+                            You're the quirky couple! You're not afraid to try new things together or take a romantic stroll off the beaten path. Whether you're at a tiki bar or a comics convention, you and your partner love to create new one-of-a-kind experiences together.
 
                         </p>
                         <br>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="row">
-                <div class="profile__title">The Adventurous Couple</div>
+                <div class="profile__title">The Quirky Couple</div>
             </div>
         </section>
 
